make sure avatar and bio-text are correct size on mobile/tablet resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1253,6 +1253,18 @@ ul {
     width: 100%;
   }
 
+  img.avatar {
+	margin-left: auto !important;
+	margin-right: auto !important;
+	display: block;
+	width: 100px;
+	height: 100px;
+  }
+
+  .author-bio-text {
+	  text-align: center;
+  }
+
   h1 {
     font-size: 120%;
   }
@@ -1345,6 +1357,18 @@ ul {
   .post-image {
     height: auto;
     width: 100%;
+  }
+
+  img.avatar {
+	margin-left: auto !important;
+	margin-right: auto !important;
+	display: block;
+	width: 100px;
+	height: 100px;
+  }
+
+  .author-bio-text {
+	  text-align: center;
   }
 
   h1 {
